--- a/src/App.scss
+++ b/src/App.scss
@@ -436,8 +436,9 @@ header {
 
   &__inner {
     @include box-overlay();
+    display: block !important;
     z-index: 99;
-    width: 200px;
+    width: 200px !important;
     padding: 10px;
     top: 10px;
     right: 0;
@@ -452,7 +453,7 @@ header {
     }
 
     button {
-      @include btn('50px');
+      @include btn(70px);
     }
 
     span {
@@ -628,7 +629,7 @@ header {
   }
 
   &__submit {
-    @include btn('90px');
+    @include btn(90px);
   }
 }
 
@@ -730,7 +731,7 @@ header {
   }
 
   &__submit {
-    @include btn('100px');
+    @include btn(100px);
   }
 
   &__cancel {
